fix(WelcomeForm): add top spacing if only child

--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -14,10 +14,6 @@
   align-items: center;
   justify-content: center;
   margin-top: 2rem;
-
-  > * {
-    margin-top: 0;
-  }
 }
 
 .action {
